src/components/all.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
}

html {
  height: 100%;
}

body {
  font-family: "Montserrat", sans-serif;
  height: 100%;
}

.navbar {
  transition: all 0.5s;
}

.navi-link {
  color: white;
  margin: 0.25rem;
}

.navi-link:hover {
  color: white;
}

.transparent {
  /* background-color: #fcfcfc; */
  background-color: #0b4c8a !important;
}

.dark {
  background-color: #0b4c8a !important;
}

.section-heading {
  font-family: "Montserrat", sans-serif;
  font-size: 3rem;
  color: black;
  font-weight: 200;
  margin-bottom: 3rem;
  padding: 0 2rem;
  text-align: center;
}

/* ======================================= LANDING HERO ============================ */

.landing-hero {
  height: 100vh;
  min-height: 50rem;
  background-image: url("./img1.jpg");
  background-position: center;
  background-size: cover;
  max-width: inherit !important;
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 5%;
  margin-left: 17%;
}

#babylon {
  font-family: "Montserrat", sans-serif;
  font-size: 80px;
  color: darkblue;
  font-weight: 800;
  margin-top: 25%;
  margin-left: 10px;
  margin-bottom: 1px;
}

#tech {
  font-family: "Montserrat", sans-serif;
  font-size: 80px;
  margin-top: 1px;
  margin-left: 10px;
  margin-bottom: 1px;
  color: rgb(49, 125, 224);
  font-weight: 800;
  padding-bottom: 1rem;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.subheading {
  font-size: 1.25rem;
  color: slategrey;
  text-align: center;
  margin-bottom: 2rem;
}

.hero-buttons {
  display: flex;
}

#servicesbtn {
  color: whitesmoke;
  margin-right: 2rem;
  min-width: 12rem;
}
#contactbtn {
  color: whitesmoke;
  min-width: 12rem;
}

/* 
.landing-hero {
  height: 100vh;
  min-height: 50rem;
  background-image: linear-gradient(90deg, rgba(30,30,30,1) 40%, rgba(30,30,30,0.18110994397759106) 100%),url('./bg1.jpeg');
  padding-top: 6rem;
  background-position: center;
  background-size: cover;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}




/* ============================= LANDING ABOUT ============================ */

.landing-about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 5rem 0;
}

.about-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  padding: 2rem;
}

.about-img-col {
  display: flex;
  justify-content: center;
}

.about-text-wrapper {
  padding: 2rem;
}

.quote {
  font-size: 3rem;
  color: rgb(49, 125, 224);
  margin-bottom: 1rem;
}

.about-text {
  font-size: 1.25rem;
  letter-spacing: 0.5px;
}

.about-logo {
  height: 25rem;
  width: auto;
}

/* ============================= LANDING SERVICES ============================ */

.landing-services {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 5rem 0;
  background-color: #f0f5f8;
}

.service-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 2rem;
  max-width: 1170px;
  margin: 0 auto;
}

.service {
  text-align: center;
  border-radius: 3px;
  padding: 3rem 1.5rem;
  margin-bottom: 2rem;
  background-color: #fff;
  transition: all 0.3s;
  position: relative;
}

.underline {
  position: relative;
  display: inline-block;
  font-size: 1.25rem;
}

.underline::after {
  content: "";
  position: absolute;
}

.service .underline::after {
  bottom: -1.5rem;
  height: 3px !important;
  width: 25%;
  left: 39%;
  background-color: rgb(49, 125, 224);
  transition: 0.4s ease-out all 0.1s;
}

.service:hover .underline::after {
  width: 90%;
  left: 5%;
  transition: 0.5s ease all;
}

.service-img {
  width: 20rem;
  height: 15rem;
  object-fit: cover;
  border-radius: 2px;
}

.service h3 {
  margin: 1rem;
}

/* ============================= LANDING CONTACT FORM ============================ */

.landing-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 5rem 0;
  background-color: #f0f5f8;
}

.form-wrapper {
  padding: 0 1rem;
}

.form-input {
  border-radius: 4.5px;
  border: 1px solid #d4d4d4;
  box-sizing: border-box;
  color: #4f555a;
  cursor: text;
  display: inline-block;
  padding: 18px;
  width: 100%;
  letter-spacing: normal;
  font-size: 18px;
  line-height: 20.7px;
  margin-bottom: 1rem;
}

/* ============================= CONTACT PAGE ============================ */

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5rem 0;
  background-color: #f0f5f8;
}

.contact-thanks {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 90vh;
  background-color: #f0f5f8;
}

.contact-page-subheading {
  font-size: 1.25rem;
}

/* =============================  FOOTER ============================ */

.footer {
  height: 25rem;
  background-color: #21212b;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* ============================= 404 ============================ */

.not-found {
  min-height: 95vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  text-align: center;
}

/* ============================= FAQ INDEX ============================ */

.faq-section {
  background-color: #e1eefa;
  min-height: 95vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.faqcard {
  padding: 2rem;
  margin: 2rem;
  max-width: 1170px;
  /* max-height: 250px; */
  border-style: solid;
  border-width: 1px;
  border-color: lightgrey;
  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
  border-radius: 5px;
  min-width: 300px;
  background-color: whitesmoke;
}

.faq-title-wrapper {
  padding: 2rem;
  text-align: center;
}

.faqtitle {
  font-family: "Montserrat", sans-serif;
  font-size: 80px;
  color: darkblue;
  font-weight: 800;
}

.faqtitle2 {
  font-family: "Montserrat", sans-serif;
  font-size: 80px;

  color: rgb(49, 125, 224);
  font-weight: 800;
}

.align-right {
  display: flex;
  justify-content: flex-end;
}

.view {
  background-image: linear-gradient(
    109.6deg,
    rgba(44, 83, 131, 1) 18.9%,
    rgba(95, 175, 201, 1) 91.1%
  );
  color: white;
  text-align: center;
  border-radius: 5px;
  padding-top: 5%;
  padding: 1rem;
  width: 90vw;
  min-width: 300px;
  max-width: 1170px;
}

.card {
  margin-bottom: 2rem;
}

.card-cascade {
  margin-left: 33%;
  margin-right: 33%;
  margin-top: 2%;
  border-radius: 25px;
}

/* ============================= FAQ PAGE ============================ */

.faq-post-section {
  min-height: 95vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  margin-top: 6rem;
  margin-bottom: 2rem;
}

/* ============================= MEDIA QUERIES ============================ */

@media screen and (min-width: 1920px) {
  .service-wrapper {
    grid-gap: 5vw;
    max-width: unset;
  }
  .service {
    width: 30rem;
  }
  .service-img {
    width: 25rem;
  }
}

@media screen and (max-width: 1600px) {
  .faq-title-wrapper {
    align-self: flex-start;
    text-align: initial;
  }
}

@media screen and (max-width: 1200px) {
  .service-wrapper {
    grid-template-columns: 1fr;
  }
  .service {
    max-width: 25rem;
  }
}

@media screen and (max-width: 768px) {
  .hero-text {
    margin-left: 0;
  }

  #babylon {
    font-size: 2.5rem;
  }
  #tech {
    font-size: 3rem;
  }

  .subheading {
    font-size: 1rem;
  }

  .hero-buttons {
    flex-direction: column;
  }
  #servicesbtn {
    margin: 0;
    margin-bottom: 1rem;
    font-size: 1rem;
  }
  #contactbtn {
    font-size: 1rem;
  }

  .section-heading {
    font-size: 2rem;
  }

  .card-title {
    font-size: 1.5rem;
  }

  .about-logo {
    height: 10rem;
    width: auto;
  }

  .contact-page-subheading {
    font-size: 1.15rem;
  }

  .faqtitle,
  .faqtitle2 {
    font-size: 3rem;
  }
}

@media screen and (max-width: 450px) {
  .service {
    width: 20rem;
  }
  .service-img {
    width: 15rem;
  }

  .faqcard {
    margin: 0.5rem;
  }

  .faqtitle {
    font-size: 2.75rem;
  }
}

